--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,8 +7,11 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 repositories { jcenter() }
 dependencies {
-    testCompile 'junit:junit:4.12'
     compile 'junit:junit:4.12'
+    compile 'org.easymock:easymock:3.2'
+    testCompile 'org.easymock:easymock:3.2'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.easymock:easymock:3.2'
 }
 
 eclipse.project {
