--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,14 @@ sourceCompatibility = 1.8
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 
+repositories { jcenter() }
+dependencies {
+    compile 'junit:junit:4.12'
+    compile 'org.easymock:easymock:3.2'
+    testCompile 'org.easymock:easymock:3.2'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.easymock:easymock:3.2'
+}
 
 eclipse.project {
     name = appName + "-core"
