--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,10 +8,20 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 repositories { jcenter() }
 dependencies {
     compile 'junit:junit:4.12'
-    compile 'org.easymock:easymock:3.2'
-    testCompile 'org.easymock:easymock:3.2'
+    compile 'org.easymock:easymock:3.6'
+    compile 'org.powermock:powermock-api-easymock:1.6.5'
+    compile 'org.powermock:powermock-module-junit4-rule-agent:1.6.5'
+    compile 'org.powermock:powermock-module-junit4-rule:1.6.5'
+    compile 'org.powermock:powermock-module-junit4:1.6.5'
+    compile 'org.powermock:powermock-module-test-easymock-junit48:1.6.2'
+    testCompile 'org.easymock:easymock:3.6'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.easymock:easymock:3.2'
+    testCompile 'org.powermock:powermock-api-easymock:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4-rule-agent:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.5'
+    testCompile 'org.powermock:powermock-module-test-easymock-junit48:1.6.2'
+    testCompile group: 'org.objenesis', name: 'objenesis', version: '2.6'
 }
 
 eclipse.project {
