--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,6 +7,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 repositories { jcenter() }
 dependencies {
+    compile "org.mockito:mockito-core:2.2.7"
     compile 'junit:junit:4.12'
     compile 'org.easymock:easymock:3.6'
     compile 'org.powermock:powermock-api-easymock:1.6.5'
@@ -14,6 +15,16 @@ dependencies {
     compile 'org.powermock:powermock-module-junit4-rule:1.6.5'
     compile 'org.powermock:powermock-module-junit4:1.6.5'
     compile 'org.powermock:powermock-module-test-easymock-junit48:1.6.2'
+    compile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+    testCompile "org.mockito:mockito-core:2.2.7"
+    testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    testCompile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
     testCompile 'org.easymock:easymock:3.6'
     testCompile 'junit:junit:4.12'
     testCompile 'org.powermock:powermock-api-easymock:1.6.5'
