added tests to FigureFactory and forced Gradle to perform clean tests

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     testCompile group: 'org.objenesis', name: 'objenesis', version: '2.6'
 }
 
+test {
+    dependsOn 'cleanTest'
+}
+
 eclipse.project {
     name = appName + "-core"
 }
