--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,7 +7,6 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 repositories { jcenter() }
 dependencies {
-    //compile "org.mockito:mockito-core:2.2.7"
     compile "org.mockito:mockito-core:2.4.0"
     compile 'org.powermock:powermock-module-junit4:1.7.0RC2',
             'org.powermock:powermock-api-mockito2:1.7.0RC2'
@@ -24,7 +23,7 @@ dependencies {
     compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
     compile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.5.4', ext: 'pom'
     compile 'org.powermock:powermock-api-mockito:1.6.5'
-    //testCompile "org.mockito:mockito-core:2.2.7"
+    compile 'com.github.stefanbirkner:system-rules:1.18.0'
     testCompile "org.mockito:mockito-core:2.4.0"
     testCompile 'org.powermock:powermock-module-junit4:1.7.0RC2',
             'org.powermock:powermock-api-mockito2:1.7.0RC2'
@@ -43,6 +42,7 @@ dependencies {
     testCompile group: 'org.objenesis', name: 'objenesis', version: '2.6'
     testCompile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.5.4', ext: 'pom'
     testCompile 'org.powermock:powermock-api-mockito:1.6.5'
+    testCompile 'com.github.stefanbirkner:system-rules:1.18.0'
 }
 
 test {
