--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,53 @@ sourceCompatibility = 1.8
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 
+repositories { jcenter() }
+dependencies {
+    //compile "org.mockito:mockito-core:2.4.0"
+    compile "org.mockito:mockito-core:1.10.19"
+    //compile 'org.powermock:powermock-module-junit4:1.7.0RC2'
+    //compile 'org.powermock:powermock-api-mockito2:1.7.0RC2'
+    compile 'junit:junit:4.12'
+    compile 'org.easymock:easymock:3.6'
+    compile 'org.powermock:powermock-api-easymock:1.6.5'
+    compile 'org.powermock:powermock-module-junit4-rule-agent:1.6.5'
+    compile 'org.powermock:powermock-module-junit4-rule:1.6.5'
+    compile 'org.powermock:powermock-module-junit4:1.6.5'
+    compile 'org.powermock:powermock-module-test-easymock-junit48:1.6.5'
+    compile group: 'org.powermock', name: 'powermock-reflect', version: '1.6.4'
+    compile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+    compile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.6.4', ext: 'pom'
+    compile 'org.powermock:powermock-api-mockito:1.6.5'
+    compile 'com.github.stefanbirkner:system-rules:1.18.0'
+    //testCompile "org.mockito:mockito-core:2.4.0"
+    testCompile "org.mockito:mockito-core:1.10.19"
+    //testCompile 'org.powermock:powermock-module-junit4:1.7.0RC2'
+    //testCompile 'org.powermock:powermock-api-mockito2:1.7.0RC2'
+    testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    testCompile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+    testCompile 'org.easymock:easymock:3.6'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.powermock:powermock-api-easymock:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4-rule-agent:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.5'
+    testCompile 'org.powermock:powermock-module-test-easymock-junit48:1.6.5'
+    testCompile group: 'org.powermock', name: 'powermock-reflect', version: '1.6.4'
+    testCompile group: 'org.objenesis', name: 'objenesis', version: '2.6'
+    testCompile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.6.4', ext: 'pom'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.5'
+    testCompile 'com.github.stefanbirkner:system-rules:1.18.0'
+}
+
+test {
+    dependsOn 'cleanTest'
+}
 
 eclipse.project {
     name = appName + "-core"
